Змінив панель навігації, та перемістив бренди в футер

--- a/Misha/main.html
+++ b/Misha/main.html
@@ -10,24 +10,33 @@
 
 <body>
 	<header>
-		<div class="logo"><img src="./logo.png" alt="logo"></div>
-		<div class="logo_lable"><a href="#About_us">FashionFusion</a></div>
-
 		<nav>
-			<a href="#">Одяг</a>
-			<a href="#">Взуття</a>
-			<a href="#">Сумки</a>
+			<div class="logo">
+				<img src="./logo.png" alt="logo">
+			</div>
+			<span><a href="#About_us">FashionFusion</a></span>
+			<span>
+				<a href="#">Одяг</a>
+				<a href="#">Взуття</a>
+				<a href="#">Сумки</a>
+			</span>
+			<span>
+				<a href="#">Профіль</a>
+				<a href="#">Кошик</a>
+			</span>
 		</nav>
-		<div class="prof">
-			<a href="#">Профіль</a>
-			<a href="#">Кошик</a>
-
-		</div>
 	</header>
+
+
 	<main>
 
 		<div class="welcome"><img src="./img/welcome.jpg" alt="welcome"></div>
+		<article class="NEW">
+			<h2>Новинка<h2>
+		</article>
+	</main>
 
+	<footer>
 		<div class="brand">
 			<div class="b_rand">
 				<a href="#"><img src="./img/logo1.png" alt="Nike"></a>
@@ -38,16 +47,8 @@
 				<a href="#"><img src="./img/logo6.png" alt="LEVIS"></a>
 			</div>
 		</div>
-		<article class="New_art">
-			<div class="NEW">
-				<h2>NEW ARRIVALS<h2>
-			</div>
-		</article>
-	</main>
 
-	<footer>
 		<div class="inf">
-
 			<div class="Contact">
 
 				<p> Контакт: <a href="tel:+1234567890">+1 (234) 567-890</a> </p>
