--- a/Misha/html/versace.html
+++ b/Misha/html/versace.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link rel="stylesheet" href="../css/all.css">
-	<link rel="stylesheet" href="../css/nike.css">
+	<link rel="stylesheet" href="../css/versace.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>FashionFusion</title>
@@ -49,11 +49,11 @@
 	<footer>
 		<div id="brand">
 			<div class="b_rand">
-				<a href="#"><img src="../img/logo1.png" alt="Nike"></a>
+				<a href="../html/nike.html"><img src="../img/logo1.png" alt="Nike"></a>
 				<a href="../html/adidas.html"><img src="../img/logo2.png" alt="Adidas"></a>
 				<a href="../html/gucci.html"><img src="../img/logo3.png" alt="GUCCI"></a>
 				<a href="../html/lacoste.html"><img src="../img/logo4.png" alt="LACOSTE"></a>
-				<a href="../html/versace.html"><img src="../img/logo5.png" alt="VERSACE"></a>
+				<a href="#"><img src="../img/logo5.png" alt="VERSACE"></a>
 				<a href="../html/levis.html"><img src="../img/logo6.png" alt="LEVIS"></a>
 			</div>
 		</div>
@@ -82,7 +82,7 @@
 					енергію та пристрасть до моди. Ми допомагаємо нашим клієнтам вибирати стильний одяг,
 					який виражає їхній унікальний смак та індивідуальність. Незважаючи на нашу невелику команду,
 					ми завжди готові надати вам найкращий обслуговування та модні рішення для вашого гардеробу.
-					До нас легко звертатися, ми завжди раді допомогти вам зробити правильний вибір та виглядати
+					До нас легко звертатися, і ми завжди раді допомогти вам зробити правильний вибір та виглядати
 					стильно та захопливо.</p>
 			</div>
 		</div>
