--- a/Misha/main.html
+++ b/Misha/main.html
@@ -47,11 +47,11 @@
 		<div id="brand">
 			<div class="b_rand">
 				<a href="./html/nike.html"><img src="./img/logo1.png" alt="Nike"></a>
-				<a href="#"><img src="./img/logo2.png" alt="Adidas"></a>
-				<a href="#"><img src="./img/logo3.png" alt="GUCCI"></a>
-				<a href="#"><img src="./img/logo4.png" alt="LACOSTE"></a>
-				<a href="#"><img src="./img/logo5.png" alt="VERSACE"></a>
-				<a href="#"><img src="./img/logo6.png" alt="LEVIS"></a>
+				<a href="./html/adidas.html"><img src="./img/logo2.png" alt="Adidas"></a>
+				<a href="./html/gucci.html"><img src="./img/logo3.png" alt="GUCCI"></a>
+				<a href="./html/lacoste.html"><img src="./img/logo4.png" alt="LACOSTE"></a>
+				<a href="./html/versace.html"><img src="./img/logo5.png" alt="VERSACE"></a>
+				<a href="./html/levis.html"><img src="./img/logo6.png" alt="LEVIS"></a>
 			</div>
 		</div>
 
