--- a/Misha/html/nike.html
+++ b/Misha/html/nike.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
+	<link rel="stylesheet" href="../css/all.css">
+	<link rel="stylesheet" href="../css/nike.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CLOTHING STORE</title>
-	<link rel="stylesheet" href="./main.css">
-	<link rel="stylesheet" href="./css/all.css">
+	<title>FashionFusion</title>
 </head>
 
 <body>
 	<header>
 		<nav>
 			<div class="logo">
-				<img src="./logo.png" alt="logo">
+				<img src="../logo.png" alt="logo">
 			</div>
-			<span><a href="#About_us">FashionFusion</a></span>
+			<span><a href="../main.html">FashionFusion</a></span>
 			<span>
 				<a href="#">Одяг</a>
 				<a href="#">Взуття</a>
@@ -27,33 +27,37 @@
 			</span>
 		</nav>
 	</header>
-
-
 	<main>
 
-		<div class="welcome"><img src="./img/welcome.jpg" alt="welcome"></div>
-		<article class="NEW">
-			<h2>Новинка<h2>
+		<div>
+			<div>
+				<h2>~~Фільтри~~</h2>
+				<p><a href="#">Футболки</a></p>
+				<p><a href="#">Шорти</a></p>
+				<p><a href="#">Взуття</a></p>
+				<p><a href="#">Розмір</a></p>
+				<p><a href="#">Кольор</a></p>
+				<p><a href="#">Ціна</a></p>
 
-				<div>
-					<a href="#"><img src="./img/t-shirt.png" alt="T-shirts"></a>
-					<a href="#"><img src="./img/t-shirt.png" alt="T-shirts"></a>
-					<a href="#"><img src="./img/t-shirt.png" alt="T-shirts"></a>
-				</div>
-		</article>
+			</div>
+
+		</div>
+		<div></div>
+
 	</main>
 
 	<footer>
 		<div id="brand">
 			<div class="b_rand">
-				<a href="./html/nike.html"><img src="./img/logo1.png" alt="Nike"></a>
-				<a href="./html/adidas.html"><img src="./img/logo2.png" alt="Adidas"></a>
-				<a href="./html/gucci.html"><img src="./img/logo3.png" alt="GUCCI"></a>
-				<a href="./html/lacoste.html"><img src="./img/logo4.png" alt="LACOSTE"></a>
-				<a href="./html/versace.html"><img src="./img/logo5.png" alt="VERSACE"></a>
-				<a href="./html/levis.html"><img src="./img/logo6.png" alt="LEVIS"></a>
+				<a href="#"><img src="../img/logo1.png" alt="Nike"></a>
+				<a href="../html/adidas.html"><img src="../img/logo2.png" alt="Adidas"></a>
+				<a href="../html/gucci.html"><img src="../img/logo3.png" alt="GUCCI"></a>
+				<a href="../html/lacoste.html"><img src="../img/logo4.png" alt="LACOSTE"></a>
+				<a href="../html/versace.html"><img src="../img/logo5.png" alt="VERSACE"></a>
+				<a href="../html/levis.html"><img src="../img/logo6.png" alt="LEVIS"></a>
 			</div>
 		</div>
+
 
 		<div class="inf">
 			<div class="Contact">
@@ -65,9 +69,9 @@
 
 
 				<div class="meseg">
-					<a href="https://www.instagram.com/misha_mag_/"><img src="./img/insta.png" alt="instagram"></a>
-					<a href="#"><img src="./img/telegram.png" alt="telegram"></a>
-					<a href="#"><img src="./img/face.png" alt="facebook"></a>
+					<a href="https://www.instagram.com/misha_mag_/"><img src="../img/insta.png" alt="instagram"></a>
+					<a href="#"><img src="../img/telegram.png" alt="telegram"></a>
+					<a href="#"><img src="../img/face.png" alt="facebook"></a>
 				</div>
 
 			</div>
@@ -78,11 +82,12 @@
 					енергію та пристрасть до моди. Ми допомагаємо нашим клієнтам вибирати стильний одяг,
 					який виражає їхній унікальний смак та індивідуальність. Незважаючи на нашу невелику команду,
 					ми завжди готові надати вам найкращий обслуговування та модні рішення для вашого гардеробу.
-					До нас легко звертатися, і ми завжди раді допомогти вам зробити правильний вибір та виглядати
+					До нас легко звертатися, ми завжди раді допомогти вам зробити правильний вибір та виглядати
 					стильно та захопливо.</p>
 			</div>
 		</div>
 	</footer>
+
 </body>
 
 </html>
