nabrosok iz chat GPT

--- a/main/main.html
+++ b/main/main.html
@@ -22,7 +22,7 @@
 				<a href="#">Сумки</a>
 			</span>
 			<span>
-				<a href="#">Профіль</a>
+				<a href="html/reg.html">Профіль</a>
 				<a href="#">Кошик</a>
 			</span>
 		</nav>
