--- a/main/html/reg.html
+++ b/main/html/reg.html
@@ -35,25 +35,21 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
           />
-          <title>Регистрация в магазине одежды</title>
-          <!-- Добавьте здесь ссылки на ваши стили CSS, если они есть -->
         </head>
         <body>
           <div class="registration-form">
-            <h1>Регистрация</h1>
+            <h1>Реєстрація</h1>
             <form action="обработчик_регистрации.php" method="post">
-              <label for="name">Имя:</label>
+              <label for="name">Ім'я:</label>
               <input type="text" id="name" name="name" required />
 
-              <label for="email">Электронная почта:</label>
+              <label for="email">Електронна адреса:</label>
               <input type="email" id="email" name="email" required />
 
               <label for="password">Пароль:</label>
               <input type="password" id="password" name="password" required />
 
-              <!-- Дополнительные поля для подтверждения пароля и другой информации -->
-
-              <button type="submit">Зарегистрироваться</button>
+              <button type="submit">Зареєструватись</button>
             </form>
           </div>
         </body>
