--- a/main/main.html
+++ b/main/main.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CLOTHING STORE</title>
+	<title>Fashion-Fusion</title>
 	<link rel="stylesheet" href="./main.css">
 	<link rel="stylesheet" href="./css/all.css">
 </head>
@@ -22,7 +22,7 @@
 				<a href="#">Сумки</a>
 			</span>
 			<span>
-				<a href="html/reg.html">Профіль</a>
+				<a href="html/reg.html">Реєстрація</a>
 				<a href="#">Кошик</a>
 			</span>
 		</nav>
