--- a/main/html/reg.html
+++ b/main/html/reg.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FashionFusion</title>
+    <link rel="shortcut icon" type="image/png" href="../logo2.png" />
   </head>
 
   <body>
@@ -21,7 +22,7 @@
           <a href="#">Сумки</a>
         </span>
         <span>
-          <a href="#">Профіль</a>
+          <a href="reg.html">Реєстрація</a>
           <a href="#">Кошик</a>
         </span>
       </nav>
