--- a/main/main.html
+++ b/main/main.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Fashion-Fusion</title>
+	<link rel="shortcut icon" type="image/png" href="./logo2.png">
 	<link rel="stylesheet" href="./main.css">
 	<link rel="stylesheet" href="./css/all.css">
 </head>
