--- a/main/html/lacoste.html
+++ b/main/html/lacoste.html
@@ -23,7 +23,7 @@
 			</span>
 			<span>
 				<a href="#">Профіль</a>
-				<a href="#">Кошик</a>
+				<a href="../header-pages/bag.html">Кошик</a>
 			</span>
 		</nav>
 	</header>
