--- a/main/header-pages/reg.html
+++ b/main/header-pages/reg.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../css/all.css" />
-    <link rel="stylesheet" href="../css/reg.css" />
+    <link rel="stylesheet" href="/fashion-fusion/main/css/all.css" />
+    <link rel="stylesheet" href="/fashion-fusion/main/header-css/reg.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FashionFusion</title>
