--- a/main/main.html
+++ b/main/main.html
@@ -23,7 +23,7 @@
 				<a href="#">Сумки</a>
 			</span>
 			<span>
-				<a href="html/reg.html">Реєстрація</a>
+				<a href="/fashion-fusion/main/header-pages/reg.html">Реєстрація</a>
 				<a href="#">Кошик</a>
 			</span>
 		</nav>
